--- a/QuartzScheduler.Web/Views/Task/index.cshtml
+++ b/QuartzScheduler.Web/Views/Task/index.cshtml
@@ -30,12 +30,12 @@
                 </div>
             </div>
             <div class="six fields search">
-                <div class="field">
+                @*<div class="field">
                     <select name="protocol" id="protocol">
                         <option value="0">执行方式</option>
                         <option value="1">HTTP</option>
                     </select>
-                </div>
+                </div>*@
                 <div class="field">
                     <select name="status">
                         <option value="-1">状态</option>
